# zml

./: MODULE.bazel
examples/: MODULE.bazel
examples/llama/: llama.zig  main.zig
examples/simple_layer/: main.zig
runtimes/cuda/: cuda.bzl  libpjrt_cuda.BUILD.bazel
zml/: buffer.zig  main.py  nn.zig  ops.zig  tensor.zig  testing.zig  torch.zig
zml/attention/: paged_attention.zig
zml/tools/: BUILD.bazel  linux.h  tracer.zig
