load("@rules_zig//zig:defs.bzl", "zig_library")

cc_library(
    name = "macos_c",
    srcs = ["macos.c"],
    hdrs = ["macos.h"],
    target_compatible_with = [
        "@platforms//os:macos",
    ],
    visibility = ["//zml/tools:__subpackages__"],
)

cc_library(
    name = "linux_c",
    srcs = ["linux.c"],
    hdrs = ["linux.h"],
    target_compatible_with = [
        "@platforms//os:linux",
    ],
    visibility = ["//zml/tools:__subpackages__"],
)

zig_library(
    name = "tools",
    srcs = ["tracer.zig"],
    main = "tools.zig",
    visibility = ["//visibility:public"],
    deps = select({
        "@platforms//os:macos": [
            ":macos_c",
        ],
        "@platforms//os:linux": [
            ":linux_c",
        ],
        "//conditions:default": [],
    }),
)
